improved navigation flow; updated cover;

--- a/client/main.html
+++ b/client/main.html
@@ -83,8 +83,14 @@ catch(e){window.attachEvent("onload", $buo_f)}
 
 
 <template name="mainLayout">
+  <div class="main-layout">
     {{>notifications}}
     {{>pageOverlay}}
 
+    
+    {{>Template.dynamic template=navigation}}
+    
+
     {{>Template.dynamic template=content}}
+  </div>
 </template>
