fixed dropdowns on desktop; fixed project page text

--- a/client/portfolio/project-slide.html
+++ b/client/portfolio/project-slide.html
@@ -26,7 +26,7 @@
 
 					<div class="text">
 						{{#if currentPage}}
-							{{currentPage.text}}
+							{{{currentPage.text}}}
 						{{else}}
 							{{{project.description}}}
 						{{/if}}
