fixed dropdown color; project slide button - ask q;

--- a/client/portfolio/project-slide.html
+++ b/client/portfolio/project-slide.html
@@ -100,7 +100,7 @@
 		</ul>
 
 
-		{{#if pages}}
+		{{#if button}}
 			<a tabindex="1" class="learn-more-btn {{#unless button.text}}placeholder-element{{/unless}}" type="button" href="{{button.link}}" title="{{button.text}}">{{button.text}}</a>
 		{{/if}}
 	</div>
