fixed project page slide

--- a/client/portfolio/project-slide.html
+++ b/client/portfolio/project-slide.html
@@ -2,7 +2,7 @@
 
 	{{#if project}}
 	{{#page}}
-		<div class="animate_page project-slide {{#if isProjectPageView}}project-page{{else}}project-cover{{/if}}" style="{{#if screensize 'xs'}}background-color:{{color}}{{/if}}">
+		<div class="animate_page project-slide {{#if currentPage}}project-page{{else}}project-cover{{/if}}" style="{{#if screensize 'xs'}}background-color:{{color}}{{/if}}">
 			<div class="content">
 				<!-- dates container -->
 				<!-- only on larger screens -->
